--- a/aplication.html
+++ b/aplication.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Seleção</title>
     <link rel="stylesheet" href="/css/global.css">
     <link rel="stylesheet" href="/css/aplication.css">
 </head>
@@ -98,7 +98,7 @@
             <br>
             <hr><br>
             <div id="totalPrice"></div>
-            <a href="">
+            <a href="/payment.html">
                 <div class="confirm">
                     <p>Pronto</p>
                 </div>
@@ -106,7 +106,7 @@
         </div>
     </div>,
 
-    <script src="script.js"></script>
+    <script src="aplication.js"></script>
 </body>
 
 </html>
