--- a/sign-in.html
+++ b/sign-in.html
@@ -33,19 +33,24 @@
             <p>Participe nesse mundo! Se aventure com nós</p><br><br>
             <form action="/cadastro" method="post">
                 <label for="username"> Usuario:<br> <input type="text" placeholder="Usuario" required id="nome"
-                        name="nome"></label><br><br>
-                <label for="email">Email: <br> <input type="email" placeholder="Email" required id="email"
-                        name="email"></label><br><br>
+                        name="nome" class="usu"></label><br><br>
+                <label for="email">Email: <br> <input type="email" placeholder="Email" required id="email" name="email"
+                        class="usu"></label><br><br>
                 <p>Gênero:</p>
                 <label for="gener-men"> <input type="radio" name="genero" value="masculino" id="genero">
                     Masculino</label><br>
                 <label for="gener-woman"> <input type="radio" name="genero" value="Feminino" id="genero">
                     Feminino</label><br><br>
                 <label for="password"> Senha:<br> <input type="password" placeholder="Senha" required id="senha"
-                        name="senha"></label><br>
-                <label for="terms"><input type="checkbox" required> Eu aceitos os <a href=""> termos de
+                        name="senha" class="usu"></label><br>
+                <label for="terms"><input type="checkbox" required> Eu aceitos os <a href="" class="usu"> termos de
                         serviço.</a></label><br><br>
+
+                
+
+
                 <button type="submit">Confirmar</button>
+
             </form><br><br>
 
             <center>
@@ -59,6 +64,7 @@
             <div class="img-phone"><img src="/img/sign-in-img.png" alt="" class="phone-format"> </div>
         </center><br>
 
+        <script src="pay.js"></script>
 
 </body>
 
